@@ -1,3 +1,9 @@
+2002-12-11  Adam Byrtek  <alpha@debian.org>
+
+	* extfs/audio: Move ...
+	* extfs/audio.in: ... here.  Add CDDB support.
+	* extfs/Makefile.am: Adjust for the above.
+
 2002-12-11  Pavel Roskin  <proski@gnu.org>
 
 	* extfs/mailfs: Try using UnixDate() from Date::Manip if it's
